// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extract-cva-params > @meta case0 1`] = `
{
  "params": [],
  "query": {
    "path": {
      "value": "/nest-btn-4",
    },
  },
}
`;

exports[`extract-cva-params > @meta case1 1`] = `
{
  "params": [],
  "query": {
    "path": {
      "value": "./nest-btn-4",
    },
  },
}
`;

exports[`extract-cva-params > base 1`] = `
{
  "base": [
    "btn",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`extract-cva-params > cv case1 1`] = `
{
  "base": [],
  "compoundVariants": [
    {
      "class": [
        "bbb",
        "ccc",
      ],
      "intent": "primary",
    },
  ],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`extract-cva-params > define base 1`] = `
{
  "base": [
    "xx",
    "yyy",
    "yy",
  ],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`extract-cva-params > dv case1 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {
    "intent": "primary",
  },
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`extract-cva-params > gcv case1 1`] = `
{
  "base": [],
  "compoundVariants": [
    {
      "class": [
        "bbb",
        "ccc",
        "aaa",
      ],
      "intent": "primary",
    },
  ],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {},
}
`;

exports[`extract-cva-params > gv case1 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "intent": {
      "primary": [
        "btn",
        "btn-primary",
      ],
    },
  },
}
`;

exports[`extract-cva-params > v case1 1`] = `
{
  "base": [],
  "compoundVariants": [],
  "defaultVariants": {},
  "file": undefined,
  "meta": {},
  "variants": {
    "intent": {
      "primary": [
        "btn",
        "btn-primary",
      ],
    },
  },
}
`;
